migration/migration.less
// -----------------------------
// Migration Styles
// -----------------------------


#migrated-site {


  // Stylseheet overrides
  // -----------------------------


  // Template wrapper (replace with corresponding template classes)
  .main {
      border-bottom: 0;
      padding-bottom: 0;
  }

  .main.wrapper {
    width: 100%;
    max-width: 100%;
    margin: 0;
  }

  .bk-header {
    margin-bottom: 0;
  }
  
  .bk-footer {
      padding-top: 0;
      
      .wrapper {
        padding-top: 1em;
        border-top: 1px solid darken(@color-swatch2,10%);
      }
  }
  

  // Widget overflow to allow 10S overlays to display correctly
  .widget.content {
    overflow: inherit;
  }
  
  .row.widget {
      margin-bottom: 0;
  }
  
  .feature-container {
      padding-bottom: 0;
  }
  .feature {
      overflow: inherit;
  }
  .feature-img-one {
      float: inherit;
  }
  .feature-img-one,
  .feature-img-two,
  .feature-img-three{
      @media @mobile {
          float: inherit;
      }
  }
  .feature-img-three {
      bottom: inherit;
      margin-top: -112px;
      
      @media @mobile {
          margin-top: 0;
      }
  }




  // Migration styles
  // -----------------------------


  // Replace with corresponding template values
  @container-width: 960px;

  @spacing__first--desktop: 43px;
  @spacing__first--tablet:  30px;
  @spacing__first--mobile:  20px;

  @spacing--other: 30px;


  // Applies spacing to widgets to mimic container width
  .empty-zone,
  #page-zones__main:empty,
  #page-zones__main > .widget:not(.row),
  .row:not(.widget):not(.row--width-no-padding) .row__container {
    margin-left: auto;
    margin-right: auto;
    max-width: @container-width;
    width: 90%;
  }


  // Move spacing to first widget in the main zone (not sections)
  &.edit #page-zones__main-overlay + .widget:not(.row),
  #page-zones__main > .widget:not(.row):first-child {
    margin-top: @spacing__first--desktop;

    @media @tablet {
      margin-top: @spacing__first--tablet;
    }
    @media @mobile {
      margin-top: @spacing__first--mobile;
    }
  }


  // Move spacing to last widget in the main zone (not sections)
  #page-zones__main > .widget:not(.row):last-child {
    margin-bottom: @spacing__first--desktop;

    @media @tablet {
      margin-bottom: @spacing__first--tablet;
    }
    @media @mobile {
      margin-bottom: @spacing__first--mobile;
    }
  }


  // Add spacing to the top of a widget when it follows a section
  #page-zones__main > .row + .widget:not(.row) {
    margin-top: @spacing--other;
  }


  // Remove spacing if widget follows a light section (change to dark if template has a dark BG)
  #page-zones__main > .row.style--light + .widget:not(.row) {
    margin-top: 0;
  }


  // Adds spacing to the section when a widget is before it
  #page-zones__main > .widget:not(.row) + .row {
    margin-top: @spacing--other;
  }


} // End of #migrated-site

